force-app/main/default/objects/Used_Item_Stock__c/Used_Item_Stock__c.object-meta.xml
<CustomObject>
    <label>Used Item Stock</label>
    <nameField>
        <label>Used Item Stock Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Used Item Stocks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>