force-app/main/default/objects/Used_Item_Stock__c/fields/Available_Item_Stock__c.field-meta.xml
<CustomField>
    <fullName>Available_Item_Stock__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Available Item Stock</label>
    <referenceTo>Available_Stock__c</referenceTo>
    <relationshipLabel>Used Item Stocks</relationshipLabel>
    <relationshipName>Used_Item_Stocks</relationshipName>
    <type>Lookup</type>
</CustomField>