force-app/main/default/objects/Used_Item_Stock__c/fields/Project_Phase__c.field-meta.xml
<CustomField>
    <fullName>Project_Phase__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Phase</label>
    <referenceTo>Project_Phase__c</referenceTo>
    <relationshipLabel>Used Item Stocks</relationshipLabel>
    <relationshipName>Used_Item_Stocks</relationshipName>
    <type>Lookup</type>
</CustomField>